[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-explorer"
version = "0.1.0"
description = "Explore and visualize Transformer tokenization, embeddings, attention, and semantic similarity."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Nikhil Chamle" }
]

dependencies = [
    "transformers>=4.50",
    "torch>=2.7",
    "numpy>=2.0",
    "matplotlib>=3.10",
    "pydantic-settings>=2.10"
]

[project.optional-dependencies]
dev = [
    "black>=25.0",
    "ruff>=0.12",
    "mypy>=1.17",
    "pytest>=8.4",
    "pre-commit>=4.2",
    "build>=1.3"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]