[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-python-template"
version = "0.1.0"
description = "Reusable enterprise-grade Python project template with modern tooling, testing, CI, and Docker."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
    { name = "Nikhil Chamle" }
]

dependencies = [
    "pydantic-settings>=2.10",
]

[project.optional-dependencies]
dev = [
    "black>=25.0",
    "build>=1.3",
    "mypy>=1.17",
    "pre-commit>=4.2",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.12",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
